add new version 0.1.1

--- a/omicx/resources/autocall-report/appsettings.json
+++ b/omicx/resources/autocall-report/appsettings.json
@@ -33,14 +33,14 @@
   "AllowedHosts": "*",
     "kafka": {
       "admin": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
       "saslPassword": "Metech123"
     },
     "consumer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "groupId": "reportingGroup2",
       "securityProtocol": "SaslPlaintext",
@@ -48,7 +48,7 @@
       "saslUsername": "kafka-admin",
       "saslPassword": "Metech123",
       "report1": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup21",
         "securityProtocol": "SaslPlaintext",
@@ -57,7 +57,7 @@
         "saslPassword": "Metech123"
       },
       "report2": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup22",
         "securityProtocol": "SaslPlaintext",
@@ -66,7 +66,7 @@
         "saslPassword": "Metech123"
       },
       "report3": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup23",
         "securityProtocol": "SaslPlaintext",
@@ -75,7 +75,7 @@
         "saslPassword": "Metech123"
       },
       "report4": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup24",
         "securityProtocol": "SaslPlaintext",
@@ -84,7 +84,7 @@
         "saslPassword": "Metech123"
       },
       "report5": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup25",
         "securityProtocol": "SaslPlaintext",
@@ -93,7 +93,7 @@
         "saslPassword": "Metech123"
       },
       "report6": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "reportingGroup26",
         "securityProtocol": "SaslPlaintext",
@@ -103,7 +103,7 @@
       }
     },
     "producer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -144,7 +144,7 @@
       "DialingStatusAndAgentStatusReportRequest": "CRM.Report.DialingStatusAndAgentStatusReportRequest"
   },
   "MongoDb": {
-    "ConnectionString": "mongodb://root:Metech123@10.106.26.100:27017/AutocallAudit",
+    "ConnectionString": "mongodb://root:Metech123@report-db:27017/AutocallAudit",
     "DatabaseName": "AutocallAudit",
     "CollectionNames": {
       "EventStreaming": "EventStreaming",
