--- a/omicx/resources/channel-manager/appsettings.json
+++ b/omicx/resources/channel-manager/appsettings.json
@@ -13,7 +13,7 @@
     "KeyPrefix": "ChannelManager",
     "Hosts": [
       {
-        "Host": "10.106.26.82",
+        "Host": "redis-host",
         "Port": "6379"
       }
     ]
@@ -42,11 +42,11 @@
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
       "saslPassword": "Metech123",
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "EnableAutoCommit": false
     },
     "Producer": {
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
