--- a/omicx/resources/chat-statistics/appsettings.json
+++ b/omicx/resources/chat-statistics/appsettings.json
@@ -22,14 +22,14 @@
   "AllowedHosts": "*",
     "kafka": {
       "admin": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
       "saslPassword": "Metech123"
     },
     "consumer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "groupId": "chatStatisticsGroup2",
       "securityProtocol": "SaslPlaintext",
@@ -37,7 +37,7 @@
       "saslUsername": "kafka-admin",
       "saslPassword": "Metech123",
       "report1": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup21",
         "securityProtocol": "SaslPlaintext",
@@ -46,7 +46,7 @@
         "saslPassword": "Metech123"
       },
       "report2": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup22",
         "securityProtocol": "SaslPlaintext",
@@ -55,7 +55,7 @@
         "saslPassword": "Metech123"
       },
       "report3": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup23",
         "securityProtocol": "SaslPlaintext",
@@ -64,7 +64,7 @@
         "saslPassword": "Metech123"
       },
       "report4": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup24",
         "securityProtocol": "SaslPlaintext",
@@ -73,7 +73,7 @@
         "saslPassword": "Metech123"
       },
       "report5": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup25",
         "securityProtocol": "SaslPlaintext",
@@ -82,7 +82,7 @@
         "saslPassword": "Metech123"
       },
       "report6": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "groupId": "chatStatisticsGroup26",
         "securityProtocol": "SaslPlaintext",
@@ -92,7 +92,7 @@
       }
     },
     "producer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -100,7 +100,7 @@
     }
   },
   "MongoDb": {
-    "ConnectionString": "mongodb://root:Metech123@10.106.26.100:27017/AutocallAudit",
+    "ConnectionString": "mongodb://root:Metech123@report-db:27017/AutocallAudit",
     "DatabaseName": "AutocallAudit"
   },
   "RecordingPrefix": "https://ps1.omicx.vn/file/",
