--- a/omicx/resources/domain-registry/appsettings.json
+++ b/omicx/resources/domain-registry/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=10.106.26.228;Initial Catalog=OMICXDomainRegistry;User ID=crmdbadmin;Password=OmicxCrm2023;Persist Security Info=True;Trust Server Certificate=true"
+    "Default": "Data Source=crm-db;Initial Catalog=OMICXDomainRegistry;User ID=crmdbadmin;Password=OmicxCrm2023;Persist Security Info=True;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
@@ -21,7 +21,7 @@
   },
   "Kafka": {
     "admin": {
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "MessageMaxBytes": 15728640,
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -31,7 +31,7 @@
     "Consumer": {
       "GroupId": "domain_registry",
       "sessionTimeoutMs": 30000,
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "EnableAutoCommit": false,
       "AutoOffsetReset": "earliest",
       "securityProtocol": "SaslPlaintext",
@@ -40,7 +40,7 @@
       "saslPassword": "Metech123"
     },
     "Producer": {
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "MessageMaxBytes": 15728640,
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
