--- a/omicx/resources/email-notification/appsettings.json
+++ b/omicx/resources/email-notification/appsettings.json
@@ -3,7 +3,7 @@
   "DomainName": "https://ps1.omicx.vn",
   "kafka": {
     "admin": {
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "MessageMaxBytes": 15728640,
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -13,7 +13,7 @@
     "consumer": {
       "GroupId": "email-noti",
       "SessionTimeoutMs": 30000,
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "MessageMaxBytes": 15728640,
         "enableAutoCommit": false,
         "autoOffsetReset": "earliest",
@@ -23,7 +23,7 @@
       "saslPassword": "Metech123"
     },
     "Producer": {
-      "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "MessageMaxBytes": 15728640,
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
