--- a/omicx/resources/job-common/appsettings.json
+++ b/omicx/resources/job-common/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
+      "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
     },
     "App": {
       "ServerRootAddress": "http://omicx-job-common-9703-service:9703/",
@@ -21,7 +21,7 @@
       "Password": "Metech@123!@#"
     },
     "Elasticsearch": {
-      "ConnectionStrings": "http://10.106.26.63:9200",
+      "ConnectionStrings": "http://elasticsearch-host:9200",
       "Username": "elastic",
       "Password": "Metech123",
       "SyncDataBatch": 1000
@@ -52,7 +52,7 @@
     },
     "kafka": {
       "admin": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -60,7 +60,7 @@
         "saslPassword": "Metech123"
       },
       "consumer": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "groupId": "omicxJobCommon",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
@@ -71,7 +71,7 @@
         "sessionTimeoutMs": 120000,
         "autoOffsetReset": "earliest",
         "requestResponseConsumer": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -83,7 +83,7 @@
         "autoOffsetReset": "earliest"
         },
         "consumeOnlyConsumer": {
-          "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
           "groupId": "omicxJobCommon",
           "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
           "securityProtocol": "SaslPlaintext",
@@ -96,7 +96,7 @@
         }
       },
       "producer": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -166,7 +166,7 @@
       "MissFromCallTitleId": 23
     },
     "RedisCache": {
-      "ConnectionString": "10.106.26.82:6379,password=Metech123,SyncTimeout=60000",
+      "ConnectionString": "redis-host:6379,password=Metech123,SyncTimeout=60000",
       "DatabaseId":  0
     },
     "Contacts": {
