--- a/omicx/resources/job-message/appsettings.json
+++ b/omicx/resources/job-message/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
+    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
   },
   "App": {
     "ServerRootAddress": "http://omicx-job-common-9703-service:9703/",
@@ -31,7 +31,7 @@
   },
   "kafka": {
       "admin": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "saslMechanism": "ScramSha512",
         "saslPassword": "Metech123",
         "saslUsername": "kafka-admin",
@@ -40,7 +40,7 @@
       "consumer": {
         "consumeOnlyConsumer": {
           "autoOffsetReset": "earliest",
-          "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
           "clientId": "omicxJobMessage",
           "enableAutoCommit": false,
           "groupId": "omicxJobMessage",
