--- a/omicx/resources/sync-tracker/appsettings.json
+++ b/omicx/resources/sync-tracker/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True;"
+    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:9788/",
@@ -24,7 +24,7 @@
   },
   "kafka": {
     "producer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -43,7 +43,7 @@
     "TablePrefix": "QRTZ_"
   },
   "RedisCache": {
-    "ConnectionString": "10.106.26.82:6379,password=Metech123",
+    "ConnectionString": "redis-host:6379,password=Metech123",
     "DatabaseId": 6
   }
 }
