--- a/omicx/resources/sync-worker/appsettings.json
+++ b/omicx/resources/sync-worker/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True;"
+    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True;"
   },
   "App": {
     "ServerRootAddress": "http://localhost:9766/",
@@ -9,7 +9,7 @@
 	"SocketIOAddress": "http://omicx-socket-server-3000-service:3000/"
   },
   "Elasticsearch": {
-    "ConnectionStrings": "http://10.106.26.63:9200",
+    "ConnectionStrings": "http://elasticsearch-host:9200",
     "Username": "elastic",
     "Password": "Metech123"
   },
@@ -30,7 +30,7 @@
   },
   "kafka": {
     "admin": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -38,7 +38,7 @@
     },
     "consumer": {
       "clientId": "CRM-SYNC",
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "groupId": "omicxSyncWorker",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -49,7 +49,7 @@
       "autoOffsetReset": "earliest"
     },
     "producer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -66,7 +66,7 @@
     "ShowSummaries": false
   },
   "RedisCache": {
-    "ConnectionString": "10.106.26.82:6379,password=Metech123",
+    "ConnectionString": "redis-host:6379,password=Metech123",
     "DatabaseId": 6
   }
 }
