--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
+    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "App": {
     "SyncConnectionString": false,
@@ -13,7 +13,7 @@
     "CorsOrigins": "https://ps1.omicx.vn,http://localhost:8080,http://localhost:8081,http://localhost:3000",
     "RootPathChatWidget": "http://172.16.88.109:8080/js/",
     "SocketIO": "http://omicx-socket-server-3000-service:3000/",
-    "BootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+    "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
     "GroupId": "csharp-consumer",
     "RecordingUrl": "http://172.16.88.109:9600/",
     "FileUrl": "http://172.16.88.109:8080/",
@@ -35,7 +35,7 @@
     "AutoCloseInMinutes": 1440
   },
   "Elasticsearch": {
-    "ConnectionStrings": "http://10.106.26.63:9200",
+    "ConnectionStrings": "http://elasticsearch-host:9200",
     "Username": "elastic",
     "Password": "Metech123"
   },
@@ -66,7 +66,7 @@
     }
   },
   "RedisCache": {
-    "ConnectionString": "10.106.26.82:6379,password=Metech123",
+    "ConnectionString": "redis-host:6379,password=Metech123",
     "DatabaseId":  0
   },
     "PaymentGateway": {
@@ -81,7 +81,7 @@
   },
   "kafka": {
     "admin": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
@@ -89,7 +89,7 @@
     },
     "consumer": {
       "clientId": "CRM",
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "groupId": "omicxCRM",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
@@ -101,7 +101,7 @@
       "autoOffsetReset": "earliest",
       "requestResponseConsumer": {
       "clientId": "CRM",
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "groupId": "omicxCRM",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
@@ -113,7 +113,7 @@
       },
       "consumeOnlyConsumer": {
         "clientId": "CRM",
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "groupId": "omicxCRM",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
@@ -125,7 +125,7 @@
       }
     },
     "producer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
