--- a/omicx/resources/authorization-service/appsettings.json
+++ b/omicx/resources/authorization-service/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+      "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True;TrustServerCertificate=True;"
     },
     "App": {
       "ServerRootAddress": "http://localhost:21021/",
@@ -25,7 +25,7 @@
     "kafka": {
       "consumer": {
         "clientId": "AuthorizationService",
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "groupId": "AuthorizationService",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
@@ -37,7 +37,7 @@
         "autoOffsetReset": "earliest",
         "requestResponseConsumer": {
           "clientId": "AuthorizationService",
-          "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
           "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
           "securityProtocol": "SaslPlaintext",
           "saslMechanism": "ScramSha512",
@@ -49,7 +49,7 @@
         },
         "consumeOnlyConsumer": {
           "clientId": "AuthorizationService",
-          "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+          "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
           "groupId": "AuthorizationService",
           "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
           "securityProtocol": "SaslPlaintext",
@@ -61,7 +61,7 @@
         }
       },
       "producer": {
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
         "saslMechanism": "ScramSha512",
@@ -80,7 +80,7 @@
       }
     },
     "RedisCache": {
-      "ConnectionString": "10.106.26.82:6379,password=Metech123",
+      "ConnectionString": "redis-host:6379,password=Metech123",
       "DatabaseId": 0
     },
     "Kestrel": {
