--- a/omicx/resources/job-email/appsettings.json
+++ b/omicx/resources/job-email/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
+    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
   },
   "App": {
     "ServerRootAddress": "http://omicx-job-email-9903-service:9903/",
@@ -31,7 +31,7 @@
   },
   "Kafka": {
     "admin": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -40,7 +40,7 @@
     },
     "consumer": {
       "clientId": "CRM-JOB",
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "groupId": "omicxJobEmail",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
@@ -52,7 +52,7 @@
       "autoOffsetReset": "earliest",
       "requestResponseConsumer": {
       "clientId": "CRM-JOB",
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
@@ -64,7 +64,7 @@
       },
       "consumeOnlyConsumer": {
         "clientId": "CRM-JOB",
-        "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+        "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
         "groupId": "omicxJobEmail",
         "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
         "securityProtocol": "SaslPlaintext",
@@ -76,7 +76,7 @@
       }
     },
     "producer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "jsonSchemaRegistryServer": "http://omicx-schema-headless:8081/",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
