--- a/omicx/resources/tenant-registration/appsettings.json
+++ b/omicx/resources/tenant-registration/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=10.106.26.228; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
+    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "ConfigurationServer": {
         "Address": "http://localhost:7099"
   },
   "MongoDb": {
-        "ConnectionString": "mongodb://root:Metech123@10.106.26.222:27017"
+        "ConnectionString": "mongodb://root:Metech123@chat-db:27017"
   },
   "App": {
     "DomainContextSuffix" : "metechvn.com",
@@ -31,14 +31,14 @@
   },
   "kafka": {
     "admin": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
       "saslPassword": "Metech123"
     },
     "consumer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "groupId": "tenantRegistration",
       "enableAutoCommit": false,
       "sessionTimeoutMs": 30000,
@@ -49,7 +49,7 @@
       "saslPassword": "Metech123"
     },
     "producer": {
-      "bootstrapServers": "10.106.26.167:9092,10.106.26.12:9092,10.106.26.129:9092",
+      "bootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
       "securityProtocol": "SaslPlaintext",
       "saslMechanism": "ScramSha512",
       "saslUsername": "kafka-admin",
